Fixed spacing.

--- a/src/styles/lust.css
+++ b/src/styles/lust.css
@@ -87,6 +87,6 @@ p {
 }
 
 /* Body text section */
-.top-space {
+#top-space {
   margin-top: 7.75em;
 }
